--- a/style.css
+++ b/style.css
@@ -34,6 +34,11 @@ header {
       &:active {
         background-color: orangered;
       }
+
+      a{
+        text-decoration: none;
+        color: orangered;
+      }
     }
   }
 }
