--- a/style.css
+++ b/style.css
@@ -1,48 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-  background-color: #c4c4c4;
-}
-
-header {
-  height: 150px;
-  background-color: #c4c4c4;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-
-  img {
-    height: 70px;
-  }
-
-  ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    gap: 20px;
-
-    li {
-      background-color: #424242;
-      color: #fff;
-      padding: 10px 30px;
-      border-radius: 5px;
-      cursor: pointer;
-
-      &:active {
-        background-color: orangered;
-      }
-
-      a{
-        text-decoration: none;
-        color: orangered;
-      }
-    }
-  }
-}
-
 main {
   img {
     width: 100%;
@@ -91,6 +46,7 @@ main {
     }
   }
   .section2 {
+    margin-top: 30px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     row-gap: 20px;
@@ -104,48 +60,5 @@ main {
         margin: 0;
       }
     }
-  }
-}
-
-footer {
-  background-color: #c4c4c4;
-  margin: 0 0 30px 0;
-  width: 50%;
-  display: flex;
-  justify-self: center;
-  justify-content: space-between;
-
-  * {
-    margin: 0;
-  }
-
-  .footer-sec-1 {
-    display: flex;
-    flex-direction: column;
-
-    .footer-sec-1-txt {
-      font-size: 16px;
-      color: orangered;
-    }
-
-    div {
-      display: flex;
-      width: 50%;
-
-      p {
-        color: #fff;
-        background-color: #424242;
-        padding: 10%;
-        margin: 5px;
-        border-radius: 5px;
-      }
-    }
-  }
-  span{
-    color: orangered;
-  }
-
-  .last-footer-container{
-    width: 300px;
   }
 }
